Replace Collectors.toList() with toList() where possible