@@ -14,7 +14,6 @@ import android.view.SubMenu;
 import android.view.View;
 import android.view.ViewGroup;
 
-import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 import com.bumptech.glide.RequestManager;
 import com.simplecity.amp_library.R;
@@ -411,7 +410,7 @@ public class AlbumArtistFragment extends BaseFragment implements
                     getContext(),
                     () -> Stream.of(contextualToolbarHelper.getItems())
                             .map(SelectableViewModel::getItem)
-                            .collect(Collectors.toList())));
+                            .toList()));
             contextualToolbarHelper = new ContextualToolbarHelper<>(contextualToolbar, new ContextualToolbarHelper.Callback() {
                 @Override
                 public void notifyItemChanged(int position) {
